<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <ImageView
        android:id="@+id/Topimage"
        android:layout_width="365dp"
        android:layout_height="43dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/banner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_s_raining"
        android:textColor="#3B3A3B"
        android:layout_margin="10dp"
        android:textSize="35sp"
        android:textStyle="normal"
        android:fontFamily="@font/font"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_suggest_you_order_these"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#5A5758"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:gravity="end"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="@font/font"
            />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addList"
        >


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ongoing_offers"
            android:layout_margin="10dp"
            android:textColor="#5A5758"
            android:textSize="20sp"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all2"
            android:gravity="end"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="@font/font"
            />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondList"
        >


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraa_offers"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#5A5758"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all3"
            android:gravity="end"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="@font/font"
            />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thirdList"
        >


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraa_offers2"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#5A5758"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all4"
            android:gravity="end"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="@font/font"
            />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourthList"
        >


    </android.support.v7.widget.RecyclerView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/location"
            android:backgroundTint="#DF595A"
            android:textColor="@android:color/white"
            android:id="@+id/locationBtn"
            android:transitionName="simple_activity_transition"
            tools:targetApi="lollipop" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>